feat: db filter
